--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -151,6 +151,14 @@ input, textarea, select, .uneditable-input {
   @include box_sizing;
 }
 
+#error_explanation {
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
+  }
+}
+
 input {
   height: auto !important;
 }
